@@ -1,4 +1,5 @@
 
+    - (Issue 114) Allow options to be passed on to basic logging wrappers
     - (Issue 122) Filter objectStack property of FirePHP class
     - (Issue 123) registerErrorHandler(false) by default
     - Added setOption() and getOption() methods
